fix styling bug "the div with id root should not have a gap."

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+#root {
+  display: flex;
+}
+
 @media screen and (max-width: 700px) {
   #root {
     flex-direction: column;
